2008-12-11  Andrew Overholt  <overholt@redhat.com>

	* feature.xml: Unpack memcheck.tests plugin after installation.

2008-12-10  Andrew Overholt  <overholt@redhat.com>

	* build.properties: Inital checkin.
	* feature.xml: Likewise.
	* feature.properties: Likewise.
	* epl-v10.html: Likewise.