@@ -3,7 +3,8 @@
       id="org.eclipse.linuxtools.valgrind.test.feature"
       label="%featureName"
       version="0.1.0"
-      provider-name="%featureProvider">
+      provider-name="%featureProvider"
+      os="linux">
 
    <description>
       %description
@@ -17,8 +18,36 @@
       %license
    </license>
 
+   <requires>
+      <import plugin="org.eclipse.ui"/>
+      <import plugin="org.eclipse.core.runtime"/>
+      <import plugin="org.junit4"/>
+      <import plugin="org.eclipse.cdt.core"/>
+      <import plugin="org.eclipse.cdt.debug.core"/>
+      <import plugin="org.eclipse.cdt.debug.ui"/>
+      <import plugin="org.eclipse.core.resources"/>
+      <import plugin="org.eclipse.debug.core"/>
+      <import plugin="org.eclipse.debug.ui"/>
+      <import plugin="org.eclipse.jface.text"/>
+      <import plugin="org.eclipse.linuxtools.profiling.launch"/>
+      <import plugin="org.eclipse.linuxtools.profiling.tests"/>
+      <import plugin="org.eclipse.linuxtools.valgrind.core"/>
+      <import plugin="org.eclipse.linuxtools.valgrind.launch"/>
+      <import plugin="org.eclipse.linuxtools.valgrind.memcheck"/>
+      <import plugin="org.eclipse.linuxtools.valgrind.ui"/>
+      <import plugin="org.eclipse.ui.ide"/>
+      <import plugin="org.eclipse.ui.editors"/>
+      <import plugin="org.eclipse.linuxtools.valgrind.massif"/>
+   </requires>
+
    <plugin
          id="org.eclipse.linuxtools.valgrind.memcheck.tests"
+         download-size="0"
+         install-size="0"
+         version="0.0.0"/>
+
+   <plugin
+         id="org.eclipse.linuxtools.valgrind.massif.tests"
          download-size="0"
          install-size="0"
          version="0.0.0"/>
